@@ -1,3 +1,6 @@
 class Roda
-  RodaVersion = '1.2.0'.freeze
+  RodaMajorVersion = 1
+  RodaMinorVersion = 2
+  RodaPatchVersion = 0
+  RodaVersion = "#{RodaMajorVersion}.#{RodaMinorVersion}.#{RodaPatchVersion}".freeze
 end
