@@ -1,5 +1,7 @@
 = HEAD
 
+* Add RodaMajorVersion, RodaMinorVersion, and RodaPatchVersion (jeremyevans)
+
 * Add delete_empty_headers plugin for deleting response headers that are empty before return response (jeremyevans)
 
 * Make freeze class method freeze internal data structures to avoid thread safety issues (jeremyevans)
